fixed overlap in text on prod campaign pg

--- a/public/css/override.css
+++ b/public/css/override.css
@@ -10,6 +10,10 @@
 .thumbnail-box{
     height:460px;
 }
+
+.thumbnail-box-prod{
+    height:auto;
+}
 .error {
     display: block;
 }
